Correct spacing

--- a/TSI01-prefix-tsuki.css
+++ b/TSI01-prefix-tsuki.css
@@ -321,7 +321,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: var(--tsuki-sp-base-lg);
+    gap: var(--tsuki-sp-double);
     margin-bottom: var(--tsuki-sp-base);
     max-width: 100%;
     overflow: hidden;
